fix: Change the notification behaviour

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,3 +41,21 @@ footer {
   padding: 1.5rem;
   background-color: #f5f5f5;
 }
+
+.notification:not(:last-child) {
+  margin-bottom: 0;
+  animation: moveout 1s 1s ease forwards;
+  position: absolute;
+  width: 100vw;
+  z-index: 31;
+}
+
+@keyframes moveout {
+  from {
+    top: 0px;
+  }
+
+  to {
+    top: -4rem;
+  }
+}
