--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ThaliaSymposium</title>
+    <title>Thalia Symposium</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-
+    <%= favicon_link_tag 'smalllogo.svg' %>
     <script>
       let menuOpen = false;
 
@@ -54,6 +53,12 @@
   </head>
 
   <body class="block">
+    <% if notice.present? %>
+      <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block notification" id="notice"><%= notice %></p>
+    <% end %>
+    <% if alert.present? %>
+      <p class="py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block notification" id="alert"><%= alert %></p>
+    <% end %>
     <% if current_page?(root_path) %>
       <header id="logo" class="w-full lg:items-end py-8 px-8 lg:grid lg:grid-cols-[1fr_2.46fr] h-[calc(100%-64px)]">
         <%= image_tag "thalialogo.svg", class: "w-1/3 lg:w-full" %>
@@ -61,7 +66,7 @@
       </header>
     <% end %>
     <%= render 'layouts/navbar' %>
-    <main class="w-full">
+    <main class="w-full min-h-screen">
       <%= yield %>
     </main>
     <%= render 'layouts/footer' %>
