--- a/app/views/speakers/index.html.erb
+++ b/app/views/speakers/index.html.erb
@@ -2,6 +2,9 @@
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
+  <% if alert.present? %>
+    <p class="py-2 px-3 bg-red-50 mb-5 text-red-500 font-medium rounded-lg inline-block" id="alert"><%= alert %></p>
+  <% end %>
 
   <div class="container pt-8 mx-auto w-full">
     <h1 class="font-bold text-6xl italic text-black w-fit">Speakers</h1>
