--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -17,8 +17,7 @@
       </div>
       <div class="flex flex-1 items-center">
         <span class="text-center">
-          <a href="https://thalia.nu/events/1009" class="underline">Sign-ups for Thalians are open here!</a> <br />
-          <%= link_to "Non Thalians can get their tickets here!", new_user_registration_path, class: "underline" %>
+          Signups have unfortunately already closed. <br />
         </span>
       </div>
     </div>
