--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -1,13 +1,45 @@
 <div class="w-full">
-  <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
-  <% end %>
-
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Lectures</h1>
+  <div class="container pt-8 mx-auto w-full">
+    <h1 class="font-bold text-6xl italic text-black w-fit">Schedule</h1>
+    <br>
+    <div class="container w-full bg-white p-4 md:p-8 shadow-lg text-lg font-medium lg:rounded-2xl">
+      Here we have the full schedule for the 2023 Symposium. If you're logged in, you can now register for the talks you want to attend during the parallel slots. <br>
+      Some of the slots will not have a parallel talk, so you will be auto-registered for the talk in the main hall during that slot. <br>
+      If you want to see what a talk is about, click on the title to see a short description before registering. <br>
+    </div>
   </div>
-
-  <div id="lectures" class="min-w-full">
-    <%= render @lectures %>
+  <br>
+  <div class="container pt-8 mx-auto w-full grid grid-cols-[15%_42.5%_42.5%] gap-4">
+    <div></div>
+    <div class="container rounded-2xl items-center p-6 text-white shadow-inner text-xl bg-[#B04EA7CC]">LUX 1</div>
+    <div class="container rounded-2xl items-center p-6 text-white shadow-inner text-xl bg-[#B04EA7CC]">Joris Ivenszaal</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">10:00 - 10:30</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">General Walk-in & Opening (LUX Cafe / LUX 1)</div>
+    <div></div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">10:30 - 11:20</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Stjepan Picek - Evolutionary algorithms in security</div>
+    <div></div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">11:30 - 12:20</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Peter Michielse - High Performance Computing</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Tumi Makinwa - Quantum Machine Learning</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">12:20 - 13:40</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">Lunch break & Companies Market (LUX Cafe)</div>
+    <div></div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">13:40 - 14:30</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Ana Lucia Varbanescu - Towards Zero-Waste Computing</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Speeddates with Companies</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">14:30 - 15:10</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">Coffee Break & Companies Market (LUX Cafe)</div>
+    <div></div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">15:10 - 16:00</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Luca Scalzotto (Infi) - Scaling Real-World Applications</div>
+    <div></div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">16:10 - 17:00</div>
+    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Johan Kwisthout - Neuromorphic complexity theory</div>
+    <div></div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">17:00 - 18:30</div>
+    <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">Borrel (LUX Cafe)</div>
+    <div></div>
   </div>
+  <br>
 </div>
