feat: Basic implementation turbo frames.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
           event.stopPropagation();
       }
     </script>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body class="block">
