--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,6 +66,7 @@
         <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
       </header>
     <% end %>
+    <%= turbo_frame_tag "modal", target: "_top", class: "w-full min-h-screen" %>
     <%= render 'layouts/navbar' %>
     <main class="w-full min-h-screen">
       <%= yield %>
