add correct links & close on `esc`

--- a/app/views/lectures/_lecture.html.erb
+++ b/app/views/lectures/_lecture.html.erb
@@ -1,4 +1,4 @@
-<div id="modal-container">
+<div id="modal-container" data-controller="turbo-modal" data-action="keyup@window->turbo-modal#closeWithKeyboard">
   <div id="actual-modal" class="relative bg-white rounded-lg shadow dark:bg-gray-700">
     <!-- Modal header -->
     <div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
