--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -12,31 +12,31 @@
   <br>
   <div class="container pt-8 mx-auto w-full grid grid-cols-[15%_42.5%_42.5%] gap-4">
     <div></div>
-    <%= link_to lecture_path(id: 1), data: { 'turbo-frame' => :modal } do %><div class="container rounded-2xl items-center p-6 text-white shadow-inner text-xl bg-[#B04EA7CC]">LUX 1</div><% end %>
+    <div class="container rounded-2xl items-center p-6 text-white shadow-inner text-xl bg-[#B04EA7CC]">LUX 1</div>
     <div class="container rounded-2xl items-center p-6 text-white shadow-inner text-xl bg-[#B04EA7CC]">Joris Ivenszaal</div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">10:00 - 10:30</div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">General Walk-in & Opening (LUX Cafe / LUX 1)</div>
     <div></div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">10:30 - 11:20</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Stjepan Picek - Evolutionary algorithms in security</div>
+    <%= link_to lecture_path(id: 1), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Stjepan Picek - Evolutionary algorithms in security</div><% end %>
     <div></div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">11:30 - 12:20</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Peter Michielse - High Performance Computing</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Tumi Makinwa - Quantum Machine Learning</div>
+    <%= link_to lecture_path(id: 2), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Peter Michielse - High Performance Computing</div><% end %>
+    <%= link_to lecture_path(id: 3), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Tumi Makinwa - Quantum Machine Learning</div><% end %>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">12:20 - 13:40</div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">Lunch break & Companies Market (LUX Cafe)</div>
     <div></div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">13:40 - 14:30</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Ana Lucia Varbanescu - Towards Zero-Waste Computing</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Speeddates with Companies</div>
+    <%= link_to lecture_path(id: 4), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Ana Lucia Varbanescu - Towards Zero-Waste Computing</div><% end %>
+    <%= link_to lecture_path(id: 5), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Speeddates with Companies</div><% end %>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">14:30 - 15:10</div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">Coffee Break & Companies Market (LUX Cafe)</div>
     <div></div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">15:10 - 16:00</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Luca Scalzotto (Infi) - Scaling Real-World Applications</div>
+    <%= link_to lecture_path(id: 6), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Luca Scalzotto (Infi) - Scaling Real-World Applications</div><% end %>
     <div></div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">16:10 - 17:00</div>
-    <div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Johan Kwisthout - Neuromorphic complexity theory</div>
+    <%= link_to lecture_path(id: 7), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-6 text-white shadow-inner text-xl">Johan Kwisthout - Neuromorphic complexity theory</div><% end %>
     <div></div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">17:00 - 18:30</div>
     <div class="container items-center bg-[#E82E8F] rounded-2xl p-6 text-white shadow-inner text-xl">Borrel (LUX Cafe)</div>
