--- a/app/views/lectures/_lecture.html.erb
+++ b/app/views/lectures/_lecture.html.erb
@@ -1,5 +1,5 @@
-<div id="modal-container">
-  <div id="actual-modal" class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+<div id="modal-container" data-controller="turbo-modal" data-action="keyup@window->turbo-modal#closeWithKeyboard">
+  <div id="actual-modal" class="relative bg-white rounded-lg shadow dark:bg-gray-700" data-controller="turbo-modal" data-action="click@window->turbo-modal#closeBackground">
     <!-- Modal header -->
     <div class="flex items-start justify-between p-4 border-b rounded-t dark:border-gray-600">
       <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
