--- a/app/views/lectures/_lecture.html.erb
+++ b/app/views/lectures/_lecture.html.erb
@@ -30,9 +30,9 @@
           <%= button_to "Register",  slots_path, params: {id: lecture.id }, class: "text-white bg-[#0FAEEECC] hover:bg-[#0FAEEEFF] rounded-lg text-sm font-medium px-5 py-2.5"%>
         <% end %>
       <% end %>
+      <div class="bg-gray-100 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 text-black"><%= lecture.current_count %> / <%= lecture.max %></div>
     <% end %>
     <button type="button" data-controller="turbo-modal" data-action="turbo-modal#hideModal" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Close</button>
-    <button type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Temp</button>
   </div>
 </div>
 </div>
