--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto w-full my-16 bg-white py-16 px-8 md:px-16 rounded-2xl drop-shadow-2xl z-0">
-  <h1 class="text-5xl font-bold">
+  <h1 class="text-5xl font-bold text-center">
     Resend Confirmation Instructions
   </h1>
   <br>
