--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,9 +11,15 @@
       <%= link_to "Sponsors",         sponsors_path, class: "block bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-full font-medium px-8 py-3 text-white" %>
       <%= link_to "Schedule", lectures_path, class: "block bg-[#0FAEEECC] hover:bg-[#0FAEEEFF] rounded-full font-medium px-8 py-3 text-white" %>
     </ul>
-    <div class="flex-none">
-      <%= link_to "Log In", new_user_session_path, id: "login-button", class: "block bg-[#222222CC] hover:bg-[#222222FF] rounded-full font-medium py-3 pl-10 pr-6 text-white" %>
-    </div>
+    <% if user_signed_in? %>
+      <div class="flex-none">
+        <%= button_to "Log Out", destroy_user_session_path, method: :delete, id: "login-button", class: "block bg-[#222222CC] hover:bg-[#222222FF] rounded-full font-medium py-3 pl-10 pr-6 text-white" %>
+      </div>
+    <% else %>
+      <div class="flex-none">
+        <%= link_to "Log In", new_user_session_path, id: "login-button", class: "block bg-[#222222CC] hover:bg-[#222222FF] rounded-full font-medium py-3 pl-10 pr-6 text-white" %>
+      </div>
+    <% end %>
   </div>
   <ul id="nav-items-expanded" class="w-full hidden flex flex-col justify-end m-0 bg-white">
     <%= link_to "Home",             root_path,     class: "block bg-[#E82F90CC] hover:bg-[#E82F90FF] px-8 py-3 font-medium text-white" %>
