Feat: Schedule & Login system for talks! (#5)
* Initial Setup of Lectures scaffold

- Only added index / show, because of needed.
- Should be used with a SPA approach, or with at least a modal instead of redirecting.

* feat: Plain page of the schedule

* feat: implement importmap & hotwire

* feat: Basic implementation turbo frames.

* feat: Fix modal design

* feat: Setup stimulus

* add correct links & close on `esc`

* feat: On background click, remove modal

* feat: Center modal && Add content to modal

* fix: Closing buttons && placeholder for signup logic

* update link to schedule

* Fix: oeps. i unbroke it now

* feat: Buttons for registering for talk

* fix: Conflicting issues && Registrations working

* feat: Limit sign-ups by count of registrations

* feat: Login frontend

* fix: Notifications not showing on top

* fix: Allow user to log out

* feat: Nother speaker lol

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
           event.stopPropagation();
       }
     </script>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body class="block">
@@ -65,6 +66,7 @@
         <%= image_tag "largelogo.svg", width: "100%", class: "mt-8 lg:m-0" %>
       </header>
     <% end %>
+    <%= turbo_frame_tag "modal", target: "_top", class: "w-full min-h-screen" %>
     <%= render 'layouts/navbar' %>
     <main class="w-full min-h-screen">
       <%= yield %>
