remove unnecessary scroll bar

--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
   <br>
-  <div class="container pt-8 w-full overflow-x-scroll mx-auto">
+  <div class="container pt-8 w-full mx-auto">
     <div class="grid grid-cols-[15%_42.5%_42.5%] gap-2 md:gap-4 pr-4 md:pr-8">
       <div></div>
       <div class="container rounded-2xl items-center p-3 md:p-6 text-white shadow-inner text-md md:text-xl bg-[#B04EA7CC]">LUX 1</div>
