--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container mx-auto w-full my-16 bg-white py-16 px-8 md:px-16 rounded-2xl drop-shadow-2xl z-0">
   <h1 class="text-5xl font-bold text-center">
-    Sign In
+    Reset Password
   </h1>
   <br>
   <div class="text-lg text-center w-full">
