--- a/app/views/lectures/index.html.erb
+++ b/app/views/lectures/index.html.erb
@@ -23,7 +23,7 @@
       <div></div>
       <div class="container items-center bg-[#E82E8F] rounded-2xl p-3 md:p-6 text-white shadow-inner text-md md:text-xl">11:30 - 12:20</div>
       <%= link_to lecture_path(id: 2), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-3 md:p-6 text-white shadow-inner text-md md:text-xl">Peter Michielse - High Performance Computing</div><% end %>
-      <%= link_to lecture_path(id: 3), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-3 md:p-6 text-white shadow-inner text-md md:text-xl">Tumi Makinwa - Quantum Machine Learning</div><% end %>
+      <%= link_to lecture_path(id: 3), data: { 'turbo-frame' => :modal } do %><div class="container items-center bg-[#6C72C2CC] hover:bg-[#6C72C2FF] rounded-2xl p-3 md:p-6 text-white shadow-inner text-md md:text-xl">Tumi Makinwa - Quantum Computing Introductio</div><% end %>
       <div class="container items-center bg-[#E82E8F] rounded-2xl p-3 md:p-6 text-white shadow-inner text-md md:text-xl">12:20 - 13:40</div>
       <div class="container items-center bg-[#E82E8F] rounded-2xl p-3 md:p-6 text-white shadow-inner text-md md:text-xl">Lunch break & Companies Market (LUX Cafe)</div>
       <div></div>
