--- a/frontend_mobile/css/index.css
+++ b/frontend_mobile/css/index.css
@@ -15,21 +15,21 @@ p {
 /* Setting the text-style of most paragraphs within the page. */
     font-family: "OCR A Std";
     color: #5FA92F;
-    font-size: 1.2rem;
+    font-size: 0.6rem;
 }
 
 li {
 /* Setting the text-style of most paragraphs within the page. */
     font-family: "OCR A Std";
-    color: #ffff;
+    color: #5FA92F;
     font-size: 1.0rem;
 }
 
 h1 {
 /* Setting the text-style of most top-headers within the page. */
     font-family: "OCR A Std";
-    color: #ffff;
-    font-size: 1.5rem;
+    color: #5FA92F;
+    font-size: 1rem;
 
 /* Always centering headers */
     text-align: center;
@@ -41,18 +41,21 @@ h1 {
 
 #container {
 /* Setting the container to cover the whole body. */
-    height: 100vh;
+    height: 94vh;
     width: 100vw;
 
 /* Inheriting padding & margin. */
     padding: inherit;
     margin: inherit;
 
+/* Overridding the top margin to allow for the top bar */
+    margin-top: 5vh;
+
 /* Making it a grid layout for easier sepparation. */
     display: grid;
 
 /* Changing the row/ column properties. */
-    grid-template-rows: 10% 90%;
+    grid-template-rows: 15% 10% 5% 60% 10%;
 
     row-gap: 2%;
     column-gap: 0;
@@ -80,7 +83,7 @@ h1 {
 
 
 #menu-background {
-/* Centering the circle in the top-left part of the overlay */
+/* Placing the circle in the top-left part of the overlay */
     position: absolute;
     top: 0;
     left: -50vw;
@@ -93,7 +96,7 @@ h1 {
     border-radius: 50%;
 
 /* Colour to match the top bar */
-    background-color: #2E2F2D;
+    background-color: #383837;
 
 /* Transition for hiding/ expanding the background */
     transition: 0ms;
@@ -103,9 +106,14 @@ h1 {
 
 #menu-background > ul {
 /* Setting to start at the left-most part of the menu */
+/* it's 50vw instead of 0 because it's relative to the background */
     position: absolute;
-    top: 5vh;
+    top: 6vh;
     left: 50vw;
+
+/* Removing margins & padding */
+    margin: 0;
+    padding: 0;
 
 /* Removing the list circle */
     list-style-type: none;
@@ -114,40 +122,29 @@ h1 {
 
 
 #menu-background  li {
-/* Setting top margins for the list elements */
-    margin-top: 10%;
-}
+/* Masking the background colour */
+    background-color: #383837;
 
+/* Adjusting the width of each element to cover the rest of the page */
+    width: 90vw;
 
+/* Rounding the border for a cleaner hover */
+    border-radius: 5%;
 
-html:not([data-menu='out']) #menu-overlay {
-/* Increasing the size of the overlay when the menu is accessed */
-    height: 25vh;
-}
+/* Adding padding to make things less cluttered */
+    padding: 2vh;
 
-
-
-html:not([data-menu='out']) #menu-background {
-/* Increasing the size of the overlay when the menu is accessed */
-    height: 50vh;
-    width: 200vw;
-
-/* Ignoring overflow in order to create the transition effect */
-    overflow: hidden;
-
-/* Transition for hiding/ expanding the background */
-    transition: 400ms ease-in-out;
+/* Setting the timing for the hove transition */
+    transition: 200ms;
 }
 
 /***********/
 /* Top Bar */
 /***********/
 
-/* State of the top bar when no scroll was detected. */
-
 #top-bar {
 /* Setting the size of the top bar to only cover a part of the top portion of the page. */
-    height: 4vh;
+    height: 5vh;
     width: 100vw;
 
 /* Setting the top bar to always sit atop the page. */
@@ -163,6 +160,12 @@ html:not([data-menu='out']) #menu-background {
     justify-content: left;
     align-items: center;
 
+/* Inheriting margins & padding */
+    margin: inherit;
+    padding: inherit;
+
+/* Ignoring overflow for hover */
+
 /* Overlaying this layer over everything in order to easily implement the menu. */
     z-index: 10;
 
@@ -172,22 +175,15 @@ html:not([data-menu='out']) #menu-background {
 
 
 
-
-/* Hiding the top-bar when the user scrolls and is not within the menu. */
-
-html:not([data-scroll='0'], [data-menu='in']) #top-bar {
-/* Moving the top-bar out with negative position. */
-    top: -6vh;
-    left: 0;
-}
-
-
-
 #top-bar > h1 {
-/* Making the header take the remaining available space */
+/* Making the header take the remaining available space. */
     width: 100%;
     
-    margin-right: 20vw;
+/* Adjusting centering because of the left icon. */
+    margin-right: 10vw;
+
+/* Adding padding to make things less cluttered. */
+    padding: 10%;
 }
 
 /*************/
@@ -197,7 +193,12 @@ html:not([data-scroll='0'], [data-menu='in']) #top-bar {
 #menu-icon {
 /* Making a square for the burger menu to lie in. */
     height: 100%;
-    width: 10%;
+    width: 20vw;
+
+/* Centering the icon */
+    display: inherit;
+    align-items: center;
+    justify-content: center;
 
 /* Transition for when the page must highligh the menu. */
     transition: 150ms ease-in;
@@ -207,32 +208,46 @@ html:not([data-scroll='0'], [data-menu='in']) #top-bar {
 
 #menu-icon > img {
 /* Limiting the image */
-    height: 90%;
+    height: 4vh;
 
 /* Inverting the colour of the image in order to make it more visible. */
     filter: invert();
-
-/* Centering the image */
-    margin: auto;
 }
 
-/********************/
-/* Menu Transitions */
-/********************/
+
+
+#menu-icon > .menu-opened {
+/* Adjusting the closed icon to match the open one. */
+    height: 2.5vh;
+}
+
+
 
 .menu-closed {
-/* Initial state of the closed assets when loading the page */
-    display: block;
-}
-
-
-
+    /* Initial state of the closed assets when loading the page. */
+        display: block;
+    }
+    
+    
+    
 .menu-opened {
-/* Initial state of the opened assets when loading the page */
+/* Initial state of the opened assets when loading the page. */
     display: none;
 }
 
+/***********************/
+/* Top Bar Transitions */
+/***********************/
 
+html:not([data-scroll='0'], [data-menu='in']) #top-bar {
+/* Moving the top-bar out with negative position. */
+    top: -10vh;
+    left: 0;
+}
+
+/********************************/
+/* Menu Description Transitions */
+/********************************/
 
 html:not([data-menu='out']) .menu-closed {
 /* Hiding the closed assets when opening the menu. */
@@ -248,13 +263,90 @@ html:not([data-menu='out']) .menu-opened {
     
 
 
-#menu:hover {
+#menu-icon:hover {
 /* Chanign the background colour on hover. */
     background-color: #1A1A1A;
+
+/* Rounding the border for a nicer transition */
+    border-radius: 5vw;
+
+/* Changing the mouse to a pointer */
+    cursor: pointer;
 }
-
-
 
 /***********************/
 /* Overlay Transitions */
 /***********************/
+
+html:not([data-menu='out']) #menu-overlay {
+/* Increasing the size of the overlay when the menu is accessed. */
+    height: 32vh;
+}
+    
+    
+    
+html:not([data-menu='out']) #menu-background {
+/* Increasing the size of the overlay when the menu is accessed. */
+    height: 50vh;
+    width: 200vw;
+    
+/* Ignoring overflow in order to create the transition effect. */
+    overflow: hidden;
+    
+/* Transition for hiding/ expanding the background. */
+    transition: 400ms ease-in-out;
+}
+
+
+
+#menu-background  li:hover {
+/* Make the selection be a different colour. */
+    background-color: #1A1A1A;
+
+/* Changing the mouse to a pointer. */
+    cursor: pointer;
+}
+
+/************************/
+/* Logo Mark Attributes */
+/************************/
+
+#logo-mark {
+/* Centering the items. */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+/* Creating a delimiter */
+    border-bottom: 1px solid #2E2F2D;
+}
+
+
+
+#logo-mark > img {
+/* Limiting the image. */
+    height: 8.5vh;
+}
+
+/***********************/
+/* Terminal Attributes */
+/***********************/
+
+.terminal-object {
+/* Adding margins for a cleaner look */
+    margin-right: 2.5vw;
+    margin-left: 2.5vw;
+
+/* Creating a delimiter */
+    border-bottom: 1px solid #2E2F2D;
+}
+
+
+
+#footer {
+/* Creating a delimiter */
+    border-top: 1px solid #2E2F2D;
+
+/* Overriding class delimiter */
+    border-bottom: none;
+}
